--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@types/chrome": "0.0.199",
@@ -34,6 +37,7 @@
     "jest": "^29.2.1",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2 ",
+    "tailwindcss": "^3.2.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
