--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-redux": "^8.0.4"
@@ -31,13 +34,14 @@
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "glob": "^8.0.3",
     "jest": "^29.2.1",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2 ",
-    "tailwindcss": "^3.2.1",
+    "style-loader": "^3.3.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
