--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -118,6 +118,12 @@ dependencies {
      *************************/
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.4.RELEASE'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+    /*************************
+     * AWS S3
+     *************************/
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
 }
 
 /*************************
