feat: feat basic component's structure

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -25,6 +25,6 @@
     }
   ],
 
-  "permissions": ["storage"],
+  "permissions": ["storage", "geolocation"],
   "host_permissions": ["<all_urls>"]
 }
