--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^5.40.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "glob": "^8.0.3",
