--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/chrome": "0.0.199",
