--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ COPY ${JAR_FILE} app.jar
 ARG YML_FILE=/src/main/resources/application.yml
 COPY ${YML_FILE} application.yml
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "-Duser.timezone=Asia/Seoul", "-Dspring.profiles.active=prod", "-Dspring.config.location=/application.yml,/home/ubuntu/properties/application-db.yml", "app.jar"]
+ENTRYPOINT ["java", "-jar", "-Duser.timezone=Asia/Seoul", "-Dspring.profiles.active=prod", "-Dspring.config.location=/application.yml,/home/ubuntu/properties/application-db.yml,/home/ubuntu/properties/application-secret.yml,/home/ubuntu/properties/application-aws.yml", "app.jar"]
