--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-redux": "^8.0.4",
