--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -4,26 +4,22 @@
   "version": "1.0",
 
   "action": {
-    "default_icon": "icon.png"
+    "default_icon": "icon16.png"
   },
   "description": "Haru dashboard for developers",
   "icons": {
-    "16": "icon.png"
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
 
-  "author": "",
+  "author": "Haru",
   "background": {
     "service_worker": "js/background.js"
   },
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["js/vendor.js", "js/content_script.js"]
-    }
-  ],
-  "permissions": ["storage", "geolocation"],
-  "host_permissions": ["<all_urls>"]
+  "permissions": ["geolocation"]
 }
