fix: allow redirection from google account (#44)

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -21,5 +21,9 @@
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
-  "permissions": ["geolocation", "tabs"]
+  "permissions": ["geolocation", "tabs"],
+  "web_accessible_resources": [{
+    "resources": ["*"],
+    "matches": ["<all_urls>"]
+  }]
 }
