update: update README and upgrade version (#64)
This commit updates README and upgrade version to 1.2.0,
deletes console.log and applies prettier.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chrome-extension-typescript-starter",
-  "version": "1.0.0",
-  "description": "chrome-extension-typescript-starter",
+  "name": "haru-dashboard",
+  "version": "1.2.0",
+  "description": "Haru dashboard for developers",
   "main": "index.js",
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
@@ -10,11 +10,10 @@
     "test": "npx jest",
     "style": "prettier --write \"src/**/*.{ts,tsx}\""
   },
-  "author": "",
-  "license": "MIT",
+  "author": "Haru",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
+    "url": "https://github.com/Haru-Dashboard/Haru-Dashboard.git"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
